Add verify-login script to debug authentication issues

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:e2e:report": "playwright show-report",
     "create-test-users": "npx tsx scripts/create-test-users.ts",
     "check-users": "npx tsx scripts/check-users.ts",
+    "verify-login": "npx tsx scripts/verify-login.ts",
     "translate-all": "npx tsx scripts/translate-all.ts",
     "create-admin": "npx tsx scripts/create-admin.ts",
     "import-photography": "npx tsx scripts/import-photography.ts"
