--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.66.0",
     "react-leaflet": "^5.0.0",
     "resend": "^6.4.2",
+    "sharp": "^0.33.5",
     "stripe": "^19.3.0",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.1.12"
