--- a/package.json
+++ b/package.json
@@ -7,7 +7,14 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "create-test-users": "npx tsx scripts/create-test-users.ts",
     "check-users": "npx tsx scripts/check-users.ts",
+    "verify-login": "npx tsx scripts/verify-login.ts",
+    "test-db": "npx tsx scripts/test-db-connection.ts",
     "translate-all": "npx tsx scripts/translate-all.ts",
     "create-admin": "npx tsx scripts/create-admin.ts",
     "import-photography": "npx tsx scripts/import-photography.ts"
@@ -39,6 +46,7 @@
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
