--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.11.1",
+    "@getbrevo/brevo": "^3.0.1",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.19.0",
     "@stripe/stripe-js": "^8.4.0",
@@ -36,6 +37,7 @@
     "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "next-auth": "^5.0.0-beta.30",
+    "nodemailer": "^7.0.11",
     "openai": "^6.8.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -52,6 +54,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
+    "@types/nodemailer": "^7.0.4",
     "@types/react": "19.2.2",
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
