--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@prisma/client": "^6.19.0",
     "@stripe/stripe-js": "^8.4.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@types/leaflet.markercluster": "^1.5.6",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^12.23.24",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "lucide-react": "^0.553.0",
     "next": "^16.0.7",
     "next-auth": "^5.0.0-beta.30",
@@ -43,6 +45,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.66.0",
     "react-leaflet": "^5.0.0",
+    "react-leaflet-cluster": "^4.0.0",
     "resend": "^6.4.2",
     "sharp": "^0.33.5",
     "stripe": "^19.3.0",
@@ -53,14 +56,14 @@
     "@playwright/test": "^1.56.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/leaflet": "^1.9.21",
-    "@types/node": "^20",
+    "@types/node": "^20.19.26",
     "@types/nodemailer": "^7.0.4",
-    "@types/react": "19.2.7",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "^18.3.27",
+    "@types/react-dom": "^18.3.7",
     "babel-plugin-react-compiler": "1.0.0",
     "baseline-browser-mapping": "^2.9.4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.1",
     "prisma": "^6.19.0",
     "tailwindcss": "^4",
     "tsx": "^4.20.6",
