--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
       "esnext"
     ],
     "allowJs": true,
+    "checkJs": true,
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
@@ -27,7 +28,7 @@
         "./src/*"
       ]
     },
-    "types": ["node"]
+    "types": ["node", "react", "react-dom"]
   },
   "include": [
     "next-env.d.ts",
